--- a/app/assets/stylesheets/user_chat.scss
+++ b/app/assets/stylesheets/user_chat.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the user_chat controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.header{
+
+}
+
 .for_all{
   display: flex;
   justify-content: flex-start;
@@ -13,10 +17,20 @@
   margin-top: 20px;
   border: 3mm ridge rgba(89, 102, 120, 0.6);
 }
-
+scroll-container {
+  display: block;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+}
+.margin{
+margin-right: 10px;
+  margin-top: 3px;
+}
 .output{
-  height: 700px;
-  width: 600px;
+  height: 80%;
+  width: 80%;
   background: #c6c3c3;
   margin-top: 20px;
   border: solid;
@@ -25,12 +39,12 @@
   align-items: flex-start;
   flex-direction: column;
 }
-
 .input{
-  margin-right: 338px;
+  margin-right: 650px;
   margin-top: 20px;
+  height: 17%;
+  width: 30%;
 }
-
 body{
   background: #f4f4f4;
 }
@@ -38,7 +52,9 @@ body{
    border-bottom: solid;
    display: flex;
    color: #e5e3e3;
+   align-items: center;
    justify-content: center;
+   height: 7%;
    width: 100%;
    background: #9e9b9b;
  }
@@ -51,8 +67,10 @@ body{
    height: 100%;
  }
  .messages{
+   display: block;
    width: 100%;
    height: 100%;
+   overflow-x:hidden;
  }
  .dialog{
    display: flex;
@@ -93,6 +111,7 @@ body{
   font-weight: 700;
   white-space: nowrap;
   transition: .3s linear;
+  margin-bottom: 2px;
 }
 .message:before, .message:after, .text:before, .text:after {
   content: "";
@@ -105,26 +124,26 @@ body{
 .message:before {
   left: -1px;
   top: -1px;
-  border-left: 1.5px solid #614DFF;
-  border-top: 1.5px solid #614DFF;
+  border-left: 1.5px solid #000000;
+  border-top: 1.5px solid #000000;
 }
 .message:after {
   bottom: -1px;
   right: -1px;
-  border-bottom: 1.5px solid #614DFF;
-  border-right: 1.5px solid #614DFF;
+  border-bottom: 1.5px solid #000000;
+  border-right: 1.5px solid #000000;
 }
 .text:after {
   right: -1px;
   top: -1px;
-  border-right: 1.5px solid #614DFF;
-  border-top: 1.5px solid #614DFF;
+  border-right: 1.5px solid #000000;
+  border-top: 1.5px solid #000000;
 }
 .text:before {
   left: -1px;
   bottom: -1px;
-  border-bottom: 1.5px solid #614DFF;
-  border-left: 1.5px solid #614DFF;
+  border-bottom: 1.5px solid #000000;
+  border-left: 1.5px solid #000000;
 }
 .text{
   margin-left: 5px;
@@ -138,4 +157,25 @@ body{
 }
 .lefter{
   padding-left: 7px;
+}
+.text_field{
+  width: 100%;
+  height: 100%;
+  max-lines: 2;
+}
+.center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cf{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.color{
+  color: #373642;
+}
+.time{
+  font-size: x-small;
 }
