--- a/app/views/user_chat/user_chat.html.erb
+++ b/app/views/user_chat/user_chat.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <div class = "general">
     <div class="left">
       <div class = "hello">
@@ -6,11 +6,11 @@
       </div>
     </div>
     <div class="right">
-      <div class = "link">
-        <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete %>
-      </div>
-      <div class = "link">
-        <%= link_to 'Go back', root_path %>
+      <div class="margin">
+      <%= link_to 'Go back', root_path, class: "btn btn-light btn-outline-warning"%>
+    </div>
+      <div class="margin">
+        <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
       </div>
     </div>
   </div>
@@ -22,53 +22,21 @@
       <h3><%= @user.email %></h3>
     </div>
     <div class="messages">
-      <div class="our_messages">
-        <% if @your_messages.nil? && @my_messages.nil? %>
-          <div class="dialog">
-            <h1>Dialog is clear</h1>
-          </div>
-        <% else %>
-          <% @your_messages.each do |your| %>
-            <div class="your lefter" data-user_id=<% @user.id %> >
-              <div class="message lefter">
-                <p class="text"><%= your.body %></p>
-              </div>
-            </div>
-          <% end %>
-            <% @my_messages.each do |my| %>
-              <div class="my">
-                <div class="message righter">
-                  <p class="text"><%= my.body %></p>
-                </div>
-              </div>
-          <% end %>
-        <% end %>
-      </div>
+        <%= render 'message'  %>
     </div>
   </div>
-  <div class="input">
-    <%= form_for :message, url: user_create_path do |f| %>
+  <div class="input" data-id="<%= @user.id %>">
+
+    <%= form_for :message, url: user_create_path, :html => { :onsubmit => "empty_form()" } do |f| %>
       <p>
-        Message<br>
-        <%= f.text_field :body%>
+        <br>
+        <%= f.text_field :body, class: "text_field", placeholder: "Write something...", id: "input", type: "text"%>
         <%= f.hidden_field :user_id, value: @user.id %>
       </p>
 
       <p>
-        <%= f.submit 'Send', class: "btn btn-primary"%>
+        <%= f.submit 'Send', class: "btn btn-light btn-outline-secondary"%>
       </p>
     <% end %>
   </div>
 </div>
-
-<script>
-
-    const div = document.getElementById("lefter")
-    const user_id = div.dataset.user_id
-
-     setInterval(() => fetch('http://localhost:3000/user_chat?user_id').then((response) => {
-         response.json();
-         console.log(response);
-     }), 2000);
-
-</script>
