--- a/app/views/user_chat/user_chat.html.erb
+++ b/app/views/user_chat/user_chat.html.erb
@@ -27,16 +27,49 @@
   </div>
   <div class="input" data-id="<%= @user.id %>">
 
-    <%= form_for :message, url: user_create_path, :html => { :onsubmit => "empty_form()" } do |f| %>
+    <%= form_tag user_create_path, id: "message_form" do %>
       <p>
         <br>
-        <%= f.text_field :body, class: "text_field", placeholder: "Write something...", id: "input", type: "text"%>
-        <%= f.hidden_field :user_id, value: @user.id %>
+        <%= text_field_tag :body, class: "text_field", placeholder: "Write something...", id: "input", type: "text", required: 'required'%>
+        <%= hidden_field_tag :user_id, @user.id %>
       </p>
 
       <p>
-        <%= f.submit 'Send', class: "btn btn-light btn-outline-secondary"%>
+        <%= button_tag 'Send', class: "btn btn-light btn-outline-secondary", id: "button_send_message"%>
       </p>
     <% end %>
   </div>
 </div>
+
+<script>
+    const data_id = document.querySelector(".input");
+    let data_set = data_id.dataset.id;
+    const url = '/user_create?user_id=' + data_set
+    const csrf = document.querySelector('meta[name="csrf-token"]').content;
+    console.log(csrf)
+
+
+    let send_form = document.getElementById("message_form")
+    send_form.addEventListener("submit", async evt => {
+        evt.preventDefault();
+        let data_for_post = document.getElementById('body').value
+        await postData(url, data_for_post)
+    } );
+
+
+    async function postData(url, data){
+        await fetch(url, {
+            method: 'POST',
+            mode: 'cors',
+            credentials: 'same-origin',
+            cache: 'no-cache',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRF-TOKEN': csrf
+            },
+            body: JSON.stringify(data)
+        });
+    }
+
+
+</script>
