post sending messages

--- a/app/assets/stylesheets/user_chat.scss
+++ b/app/assets/stylesheets/user_chat.scss
@@ -179,3 +179,11 @@ body{
 .time{
   font-size: x-small;
 }
+.two_forms{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+}
+.for_websocket{
+  margin-left: 260px;
+}
