--- a/app/assets/stylesheets/user_chat.scss
+++ b/app/assets/stylesheets/user_chat.scss
@@ -96,6 +96,7 @@ body{
   justify-content: flex-end;
   align-items: flex-end;
  }
+
 .message {
   display: flex;
   justify-content: center;
@@ -111,7 +112,10 @@ body{
   font-weight: 700;
   white-space: nowrap;
   transition: .3s linear;
-  margin-bottom: 2px;
+  margin-bottom: 4px;
+  margin-top: 5px;
+  margin-right: 4px;
+  margin-left: 4px;
 }
 .message:before, .message:after, .text:before, .text:after {
   content: "";
@@ -151,13 +155,6 @@ body{
   margin-bottom: 0;
 }
 
-.righter{
-  margin-right: 7px;
-  margin-bottom: 10px;
-}
-.lefter{
-  padding-left: 7px;
-}
 .text_field{
   width: 100%;
   height: 100%;
@@ -168,11 +165,7 @@ body{
   justify-content: center;
   align-items: center;
 }
-.cf{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
 .color{
   color: #373642;
 }
