fixed time format

--- a/app/views/user_chat/_message.html.erb
+++ b/app/views/user_chat/_message.html.erb
@@ -3,15 +3,15 @@
       <% if message.sender_id == @user.id %>
         <div class="your" data-user_id=<% @user.id %>>
           <div class="message">
-            <p class="text color time"><%= l(message.created_at, format: :short ) %> </p>
+            <p class="text color time"><%= I18n.l(message.created_at, format: :message_time ) %> </p>
             <p class="text"><%= message.body %></p>
           </div>
         </div>
       <% else %>
         <div class="my">
           <div class="message">
+            <p class="text color time"><%= I18n.l(message.created_at, format: :message_time ) %> </p>
             <p class="text"><%= message.body %></p>
-            <p class="text color time"><%= l(message.created_at, format: :short ) %> </p>
           </div>
         </div>
       <% end %>
