--- a/app/views/chat/chat.html.erb
+++ b/app/views/chat/chat.html.erb
@@ -2,12 +2,18 @@
   <div class = "general">
     <div class="left">
       <div class = "hello">
-        <h3 class="user"><%= current_user.email%></h3>
+        <h3 class="user"><%= t(:welcome)%>, <%= current_user.email %></h3>
       </div>
     </div>
     <div class="right">
       <div class="margin">
-        <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
+        <%= link_to 'En', '/?locale=en', :method => :post, class: "btn btn-light btn-outline-info" %>
+      </div>
+      <div class="margin">
+        <%= link_to 'Ua', '/?locale=ua', :method => :post, class: "btn btn-light btn-outline-info" %>
+      </div>
+      <div class="margin">
+        <%= link_to t(:exit), destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
       </div>
     </div>
   </div>
