--- a/app/views/chat/_users.html.erb
+++ b/app/views/chat/_users.html.erb
@@ -14,7 +14,11 @@
         <tr>
           <th scope="row"><%= counter %></th>
           <% counter += 1 %>
-          <td><%= user.email %></td>
+          <td><%= if user.user_name
+                    user.user_name
+                  else
+                    user.email
+                  end %></td>
           <td><%= link_to user_chat_path(user_id: user.id),class: "btn btn-outline-secondary btn-sm", :method => :get do %>
               Messages
             <% end %></td>
