refactoring and uploading_files

--- a/app/assets/stylesheets/user_chat.scss
+++ b/app/assets/stylesheets/user_chat.scss
@@ -183,3 +183,9 @@ body{
 .for_fetch{
   margin-left: 50px;
 }
+.avatar {
+  vertical-align: middle;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+}
