--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -102,3 +102,25 @@ a:hover {
 .title-lg{
 
 }
+
+.for_user_page{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  margin-top: 100px;
+}
+
+
+.row{
+  display: flex;
+  flex-direction: column;
+}
+.avatar {
+  vertical-align: middle;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  margin-left: 1500px;
+  margin-bottom: 20px;
+}
