--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,14 @@
-<header><% counter = 1%>
+<header>
   <div class = "general">
     <div class="left">
       <div class = "hello">
-        <h3 class="user">Welcome, <%= current_user.email%></h3>
+        <h3 class="user">Welcome, <%= @login_name %></h3>
       </div>
     </div>
     <div class="right">
+      <div class="margin">
+        <a href="/users/<%=current_user.id.to_s%>/edit"><%= image_tag current_user.avatar.url(:thumb), class: "avatar" %></a>
+      </div>
       <div class="margin">
         <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
       </div>
@@ -15,11 +18,9 @@
 
 <%#= will_paginate %>
 <div class="alert alert-dark container" role="alert">
-  <h2 class="title-lg">
-    <%= @users.count - 1 %>
-    <%= inclination(@users.count - 1, 'друг', 'друга', 'друзей') %>
-  </h2>
+
 </div>
-<%= render 'users', users: @users, user_id: @user_id %>
+
+<%= render 'users', users: @users %>
 
 <%#= will_paginate %>
