--- a/app/views/user_chat/_message.html.erb
+++ b/app/views/user_chat/_message.html.erb
@@ -2,6 +2,9 @@
     <% @messages.each do |message| %>
       <% if message.sender_id == @user.id %>
         <div class="your" data-user_id=<% @user.id %>>
+          <div id="for_file_downloading">
+            <%= link_to message.file, '/files/' + message.file, class: "link-info", download: message.file %>
+          </div>
           <div class="message">
             <p class="text color time"><%= l(message.created_at, format: :short ) %> </p>
             <p class="text"><%= message.body %></p>
@@ -9,6 +12,11 @@
         </div>
       <% else %>
         <div class="my">
+          <% if message.file %>
+            <div id="for_file_downloading" class="small">
+              <%= link_to message.file, '/files/' + message.file, class: "link-info", download: message.file %>
+            </div>
+          <% end %>
           <div class="message">
             <p class="text"><%= message.body %></p>
             <p class="text color time"><%= l(message.created_at, format: :short ) %> </p>
