--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,21 +19,6 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-a {
-    color: black;
-    text-decoration: none;
-}
-
-
-a:hover {
-    text-decoration: none;
-}
-
-a:visited {
-    color: black;
-}
-
-
 label {
     display: block;
 }
@@ -215,14 +200,13 @@ header {
     margin-top: 5px;
 }
 
-a:hover {
-    color: black;
-    text-decoration: none;
-}
-
 .link a{
     margin-top: 12px;
     height: 100%;
     text-align: center;
     width: 100%;
+}
+
+a:hover {
+    color: #004cff;
 }
