--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,13 @@
     </div>
     <div class="right">
       <div class="margin">
-        <a href="/users/<%=current_user.id.to_s%>/edit"><%= image_tag current_user.avatar.url(:thumb), class: "avatar" %></a>
+        <a href="/users/<%=current_user.id.to_s%>/edit">
+          <% if current_user.avatar.url %>
+            <%= image_tag current_user.avatar.url(:thumb), class: "avatar" %>
+          <% else %>
+            <%= button_tag 'Profile', class: "btn btn-primary btn-xs" %>
+          <% end %>
+        </a>
       </div>
       <div class="margin">
         <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
