--- a/app/views/chat/chat.html.erb
+++ b/app/views/chat/chat.html.erb
@@ -1,25 +1,14 @@
-<header><% counter = 1%>
-  <div class = "general">
-    <div class="left">
-      <div class = "hello">
-        <h3 class="user">Welcome, <%= current_user.email%></h3>
-      </div>
-    </div>
-    <div class="right">
-      <div class="margin">
-        <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
-      </div>
-    </div>
-  </div>
-</header>
 
-<%#= will_paginate %>
-<div class="alert alert-dark container" role="alert">
-  <h2 class="title-lg">
-    <%= @users.count - 1 %>
-    <%= inclination(@users.count - 1, 'друг', 'друга', 'друзей') %>
-  </h2>
+<%= render 'layouts/header'  %>
+
+<div class="chat-padding">
+  <%= render 'users', users: @users_show, user_id: @user_id %>
 </div>
-<%= render 'users', users: @users, user_id: @user_id %>
 
-<%#= will_paginate %>
+  <div class="chat-pagination">
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <%= paginate @users_show %>
+      </ul>
+    </nav>
+  </div>
