--- a/app/views/user_chat/_message.html.erb
+++ b/app/views/user_chat/_message.html.erb
@@ -2,14 +2,14 @@
     <% @messages.each do |message| %>
       <% if message.sender_id == @user.id %>
         <div class="your" data-user_id=<% @user.id %>>
-          <div class="message">
+          <div class= "alert alert-primary message">
             <p class="text color time"><%= l(message.created_at, format: :short ) %> </p>
             <p class="text"><%= Obscenity.replacement(:stars).sanitize(message.body) %></p>
           </div>
         </div>
       <% else %>
         <div class="my">
-          <div class="message">
+          <div class="alert alert-primary message">
             <p class="text"><%= Obscenity.replacement(:stars).sanitize(message.body) %></p>
             <p class="text color time"><%= l(message.created_at, format: :short ) %> </p>
           </div>
