--- a/app/views/user_chat/user_chat.html.erb
+++ b/app/views/user_chat/user_chat.html.erb
@@ -1,25 +1,10 @@
-<header class="header">
-  <div class = "general">
-    <div class="left">
-      <div class = "hello">
-        <h3 class="user"><%= current_user.email%></h3>
-      </div>
-    </div>
-    <div class="right">
-      <div class="margin">
-      <%= link_to 'Go back', root_path, class: "btn btn-light btn-outline-warning"%>
-    </div>
-      <div class="margin">
-        <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
-      </div>
-    </div>
-  </div>
-</header>
 
-<div class="for_all">
-  <div class="output">
-    <div class="name" data-id="<%= current_user.id %>">
-      <h3><%= @user.email %></h3>
+<%= render 'layouts/header'  %>
+
+<div class="for_all border border-primary border-3 rounded-6">
+  <div class="output rounded-4">
+    <div class="name d-block p-2 rounded-3" data-id="<%= current_user.id %>">
+      <h3 class="h3"><%= @user.email %></h3>
     </div>
     <div class="messages">
         <%= render 'message'  %>
@@ -31,11 +16,11 @@
         <p>
           <br>
           <%= text_field_tag :input_message, class: "text_field", placeholder: "Write something...", type: "text", required: 'required'%>
-          <%= hidden_field_tag :user_id, @user.id %>
+          <%= hidden_field_tag :user_id,  @user.id %>
         </p>
 
         <p>
-          <%= button_tag 'API', class: "btn btn-light btn-outline-secondary", id: "button_send_message"%>
+          <%= button_tag 'API', class: "btn btn-info", id: "button_send_message"%>
         </p>
       <% end %>
     </div>
@@ -48,7 +33,7 @@
       </p>
 
       <p>
-        <%= button_tag 'Websocket', class: "btn btn-light btn-outline-secondary", id: "button_for_websocket"%>
+        <%= button_tag 'Websocket', class: "btn btn-info", id: "button_for_websocket"%>
       </p>
     <% end %>
     </div>
@@ -61,10 +46,9 @@
         </p>
 
         <p>
-          <%= button_tag 'Fetch', class: "btn btn-light btn-outline-secondary", id: "button_send_message"%>
+          <%= button_tag 'Fetch', class: "btn btn-info", id: "button_send_message"%>
         </p>
       <% end %>
     </div>
   </div>
 </div>
-
