--- a/app/javascript/css/user_chat.scss
+++ b/app/javascript/css/user_chat.scss
@@ -116,6 +116,11 @@ body {
   margin-right: 5px;
   margin-bottom: 0;
 }
+
+.content{
+  font-family: 'Capture', serif;
+}
+
 .text_field {
   width: 100%;
   height: 100%;
