--- a/app/javascript/packs/application.scss
+++ b/app/javascript/packs/application.scss
@@ -2,3 +2,7 @@
 @import "../css/user_chat";
 @import "../css/main";
 @import '/home/user/RubymineProjects/demo/node_modules/mdb-ui-kit/src/scss/mdb.free.scss';
+@font-face {
+  font-family: 'Capture';
+  src: url("fonts/Capture-it/Capture_it.woff") format("woff");
+}
