--- a/app/views/chat/chat.html.erb
+++ b/app/views/chat/chat.html.erb
@@ -1,5 +1,17 @@
-
-<%= render 'layouts/header'  %>
+<header class="header">
+  <div class = "general">
+    <div class="left">
+      <div class = "hello">
+        <h3 class="user"><%= current_user.email%></h3>
+      </div>
+    </div>
+    <div class="right">
+      <div class="margin">
+        <%= link_to 'Exit', destroy_user_session_path, data: {confirm: "Are you sure?"}, :method => :delete, class: "btn btn-light btn-outline-danger" %>
+      </div>
+    </div>
+  </div>
+</header>
 
 <div class="chat-padding">
   <%= render 'users', users: @users_show, user_id: @user_id %>
