--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -184,6 +184,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 15px;
 }
 .general {
     display: flex;
