--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -10,6 +10,7 @@ table{
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
 }
 th{
   padding-right: 50px;
@@ -23,16 +24,6 @@ th{
   justify-content: center;
   align-items: center;
   margin-right: 10px;
-}
-.hello{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  }
-.general {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 .user{
  color: #c6c3c3;
@@ -49,11 +40,6 @@ th{
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-}
-
-.left{
-  display: flex;
-  justify-content: flex-start;
 }
 .users{
   display: flex;
