--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -14,11 +14,7 @@
         <tr>
           <th scope="row"><%= counter %></th>
           <% counter += 1 %>
-          <td><%= if user.user_name
-                    user.user_name
-                  else
-                    user.email
-                  end %></td>
+          <td><%= user.user_name || user.email %></td>
           <td><%= link_to user_chat_path(user_id: user.id),class: "btn btn-outline-secondary btn-sm", :method => :get do %>
               Messages
             <% end %></td>
