--- a/app/views/user_chat/user_chat.html.erb
+++ b/app/views/user_chat/user_chat.html.erb
@@ -28,7 +28,7 @@
 <div class="for_all border border-primary border-3 rounded-6">
   <div class="output rounded-4">
     <div class="name p-2 rounded-3" data-id="<%= current_user.id %>">
-      <h3 class="h3"><%= @user.email %></h3>
+      <h3 class="h3"><%= @room.title %></h3>
     </div>
     <div class="messages">
         <%= render 'message'  %>
